--- a/CodeGenUtility/src/main/resources/static/html/requestFormS3.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormS3.html
@@ -1,40 +1,11 @@
-<div ng-show="loadingBackgronud" class="loadingBackgronud"></div>
+<!-- <div ng-show="loadingBackgronud" class="loadingBackgronud"></div>
 <div ng-show="dataLoading" class="dataLoading" id="loading-indicator">
 	<img src="img/loader.gif" width="100" height="150">
 </div>
-<div class="container-fluid outerContainer">
+
+<div class="container-fluid">
 	<div class="innerContainer" ng-init="pageLoadData()">
-		<div class="innerContainer1">
-			<div class="row titleDiv">
-				<div class="col-md-12 titleDesc">
-					SOURCE LOCATION
-					<div style="padding-bottom: 24px"></div>
-					<div class="stroke"></div>
-				</div>
-			</div>
-			<div class="row myRadioBtns">
-				<div class="col-md-3 ">
-					<input class="btnRadio" type="radio" name="optradio"
-						ng-model="datasrc" ng-value='"RDBMS"'><label
-						class="sourcelocationLabel"> RDBMS </label>
-				</div>
-				<div class="col-md-3 ">
-					<input class="btnRadio" type="radio" name="optradio"
-						ng-model="datasrc" ng-value='"Hadoop"'>
-					<label class="sourcelocationLabel"> Hadoop</label>
-				</div>
-				<div class="col-md-3">
-					<input class="btnRadio" type="radio" name="optradio"
-						ng-model="datasrc" ng-value='"Files"'> <label
-						class="sourcelocationLabel"> Files</label>
-				</div>
-				<div class="col-md-3">
-					<input class="btnRadio" type="radio" name="optradio"
-						ng-model="datasrc" ng-value='"S3"'><label
-						class="sourcelocationLabel"> S3</label>
-				</div>
-			</div>
-		</div>
+		
 		<div class="innerContainer2">
 			<form role="form" name="rdbmsForm">
 				<div id="sourceType">
@@ -47,62 +18,69 @@
 					</div>
 					<div class="row dbConnection">
 						<div class="col-md-3">
-							<label class="labelSubHeader" style="padding-top: 0">DATA SOURCE</label> 
-							<input type="text" class="customTextBox " id="datasrc" placeholder="Please Enter" required>	
+							<label class="labelSubHeader" style="padding-top: 0">DATA
+								SOURCE</label> <input type="text" class="customTextBox " id="datasrc"
+								placeholder="Please Enter" required>
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader" style="padding-top: 0">REGION</label> 
-							<input type="text" class="customTextBox" id="region" placeholder="Please Enter">
+							<label class="labelSubHeader" style="padding-top: 0">REGION</label>
+							<input type="text" class="customTextBox" id="region"
+								placeholder="Please Enter">
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader" style="padding-top: 0">OBJECT</label> 
-							<input type="text" class="customTextBox" id="Object" placeholder="Please Enter">
+							<label class="labelSubHeader" style="padding-top: 0">OBJECT</label>
+							<input type="text" class="customTextBox" id="Object"
+								placeholder="Please Enter">
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">BUCKET</label>
-							<input type="text" class="customTextBox" id="Bucket" placeholder="Please Enter">
+							<input type="text" class="customTextBox" id="Bucket"
+								placeholder="Please Enter">
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
-							<label class="labelSubHeader">FILE SCHEMA</label>
-							<input type="text" class="customTextBox" id="fileschema" placeholder="Please Enter">
+							<label class="labelSubHeader">FILE SCHEMA</label> <input
+								type="text" class="customTextBox" id="fileschema"
+								placeholder="Please Enter">
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader">FILE TYPE</label> 
-							<select  class="customDropDown" id="sel2">
-                                <option>File Type1</option>
-                                <option>File Type2</option>
-                            </select>
+							<label class="labelSubHeader">FILE TYPE</label> <select
+								class="customDropDown" id="sel2">
+								<option>File Type1</option>
+								<option>File Type2</option>
+							</select>
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader">FILE DELIMITER</label> 
-							<input type="text" class="customTextBox" id="FileDelimiter" placeholder="Please Select">
+							<label class="labelSubHeader">FILE DELIMITER</label> <input
+								type="text" class="customTextBox" id="FileDelimiter"
+								placeholder="Please Select">
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader">SOURCE COLUMNS</label> 
-							<select  class="customDropDown" id="srccol">
-	                            <option>Source Columns1</option>
-	                            <option>Source Columns2</option>
-	                        </select>
+							<label class="labelSubHeader">SOURCE COLUMNS</label> <select
+								class="customDropDown" id="srccol">
+								<option>Source Columns1</option>
+								<option>Source Columns2</option>
+							</select>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-3">
-							<label class="labelSubHeader">ROW TAG</label>
-							<input type="text" class="customTextBox" id="rowtag" placeholder="Please Enter">
+							<label class="labelSubHeader">ROW TAG</label> <input type="text"
+								class="customTextBox" id="rowtag" placeholder="Please Enter">
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader">CALCULATE DELTA ON</label> 
-							<input type="text" class="customTextBox" id="deltaOn" placeholder="On/Off">
+							<label class="labelSubHeader">CALCULATE DELTA ON</label> <input
+								type="text" class="customTextBox" id="deltaOn"
+								placeholder="On/Off">
 						</div>
 					</div>
 				</div>
-				<!-- sourceType div ends -->
+				sourceType div ends
 
 
-				<!-- Common for all sections -->
+				Common for all sections
 				<div id="targetType" class="myRadioBtns">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
@@ -129,11 +107,9 @@
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">LOAD
-								TYPE</label> 
-							<select class="customDropDown" id="loadtype"
+								TYPE</label> <select class="customDropDown" id="loadtype"
 								ng-model="codeGenRequest.loadType">
-								<option selected="selected" value="">Please Select
-									</option>
+								<option selected="selected" value="">Please Select</option>
 								<option name="loadtype"
 									ng-selected="{{src.value == codeGenRequest.loadType}}"
 									ng-repeat="src in loadType">{{src.value}}</option>
@@ -164,8 +140,7 @@
 								ng-model="codeGenRequest.hiveTableType"
 								ng-change="changePartitinKey(codeGenRequest.hiveTableType)"
 								ng-disabled="disabled">
-								<option selected="selected" value="">Please Select
-									</option>
+								<option selected="selected" value="">Please Select</option>
 								<option ng-repeat="src in hiveTableType">{{src.value}}</option>
 							</select>
 						</div>
@@ -184,21 +159,20 @@
 								class="customDropDown" ng-required="colRequiredchk=='false'"
 								id="hivepartionkey" ng-model="codeGenRequest.targetPartitionKey"
 								ng-disabled="isdisabled">
-								<option selected="selected" value="">Please Select
-									</option>
+								<option selected="selected" value="">Please Select</option>
 								<option ng-repeat="field in codeGenRequest.sourceColumnNames "
 									value="{{field}}">{{field}}</option>
 							</select>
-							<!-- 			<input type="text"  name="hivetable" ng-required="colRequiredchk=='false'" placeholder="Please Enter" class="customTextBox" id="hivetable"  value="" ng-model="rdbms.targetTableName" ng-disabled="hivetabledisabled" required>
-			 -->
+										<input type="text"  name="hivetable" ng-required="colRequiredchk=='false'" placeholder="Please Enter" class="customTextBox" id="hivetable"  value="" ng-model="rdbms.targetTableName" ng-disabled="hivetabledisabled" required>
+			
 						</div>
 					</div>
 
 				</div>
-				<!-- sourceType div ends -->
+				sourceType div ends
 				<div class="row" style="padding-left: 68.3%;">
 					<button type="button" class="btn targetButton"
-						ng-click="onCancel();">Cancel New Request</button>
+						ng-click="onCancel();">Cancel</button>
 					<span style="padding-right: 2%;"></span>
 					<button type="button" class="btn btn-primary myButton"
 						ng-click="postdata(codeGenRequest);">Create New Request</button>
@@ -207,4 +181,4 @@
 			</form>
 		</div>
 	</div>
-</div>
+</div> -->
