--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -45,12 +45,12 @@
 					</a>
 				</li>
 				<li style="height: 58px;padding-top: 23%;" ng-class="activeClass" onclick="">
-					<a href="#" class="btn-lg">
+					<a href="" class="btn-lg">
 			          <span class="glyphicon glyphicon-dashboard" style="font-size: 26px;color: white;"></span>
 			        </a>
 				</li>
 				<li style="height: 58px;padding-top: 23%;" ng-class="activeClass">
-					<a href="#" class="btn-lg">
+					<a href="" class="btn-lg">
 			          <span class="glyphicon glyphicon-briefcase" style="font-size: 26px;color: white;"></span>
 			        </a>
 			    </li>
@@ -60,18 +60,6 @@
 
 		<div class="article">
 		<!-- <div class="outerContainer" style="padding-bottom:0"> apply for align-->
-			<div class="articleContainer">
-				<div class="row">
-					<div class="col-md-5">
-						<left><div class="titleLeftUp">LOREM IPSUM</div>
-						<div class="titleLeftDown">DOLOR SIT AMET</div> 
-						</left>
-					</div>
-					<div class="col-md-7">
-						<div class="titleCenterMiddle">Ingestion</div> 
-					</div>
-				</div>
-			</div>
 			<div ng-view></div>
 		</div>
 	</div>
